fix(docker): remove trivy binary from image and pass jvm --enable-preview flag